name: timecache
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: 2010 Author Here
maintainer: gabriele.carrettoni@gmail.com
homepage: http://github.com/ga2arch/timecache#readme
synopsis: Simple project template from stack
description:
    Please see README.md
category: Web
author: Gabriele Carrettoni

executable timecache
    main-is: Main.hs
    build-depends:
                         async -any
                  , attoparsec -any
                  , attoparsec-binary -any
                  , base >=4.7 && <5
                  , blaze-builder -any
                  , bytestring -any
                  , containers >= 0.5.6.2
                  , directory -any
                  , exceptions -any
                  , http-client -any
                  , http-types -any
                  , list-t >= 0.4.5.1
                  , monad-control -any
                  , monad-logger -any
                  , mtl -any
                  , optparse-applicative -any
                  , scotty -any
                  , stm >= 2.4.4
                  , stm-chans >= 3.0.0.4
                  , streaming-commons -any
                  , string-conversions -any
                  , text -any
                  , time -any
                  , transformers -any
                  , transformers-base -any
                  , unix -any
                  , unordered-containers -any
                  , hslogger -any
                  , aeson -any

    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:
        Cache.TimeCache
        Cache.TimeCache.Types
        Cache.TimeCache.Utils
        Cache.TimeCache.Worker
        Cache.TimeCache.Server
        Cache.TimeCache.Binary
    ghc-options:
        -O2
        -threaded
        -rtsopts
        "-with-rtsopts=-N4"
        -fno-prof-auto
